website/static/website/styles/base.css
/* Global elements styles */

a {
  color: darkred;
  text-decoration: none;
}

a:hover {
  color: red;
}


/* Blocks styles */

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

section {
  margin-bottom: 1rem;
}

.content {
  flex: 1;
}


/* Elements styles */

.badge-multline {
  white-space: normal;
  text-align: left;
}

.navbar-toggler-icon>i {
  font-size: 1.5em;
}

.nav-tabs .nav-item {
  white-space: nowrap;
}


/* Themes */
.navbar-ecssweb .navbar-nav .nav-link {
  padding: .5rem .5rem;
  color: white;
}

.navbar-ecssweb .navbar-nav .nav-link:hover {
  color: white;
}

.navbar-ecssweb .navbar-nav .nav-link:focus {
  color: white;
}

.navbar-ecssweb .nav-item:hover {
  background-color: #d82129;
  border-radius: .2rem
}

.btn-ecssweb {
  color: white;
  background-color: darkred;
  border-color: darkred;
}

.btn-ecssweb:hover {
  color: white;
  background-color: #d82129;
  border-color: #d82129;
}

.btn-ecssweb-light {
  color: darkred;
  background-color: white;
  border-color: darkred;
}

.btn-ecssweb-light:hover {
  color: #d82129;
  background-color: white;
  border-color: #d82129;
}

.btn-link-ecssweb {
  color: darkred;
}

.btn-link-ecssweb:hover {
  color: #d82129;
}

.icon-link {
  color: darkred;
  text-decoration: none;
}

.icon-link > i {
  color: black;
  text-decoration: none;
  font-size: 1.5rem;
  width: 1.5rem;
  text-align: center;
}

.icon-link:hover {
  color: red;
  text-decoration: none;
}

.icon-link:hover > i {
  color: gray;
  text-decoration: none;
}


/* Header */

header {
  background-color: black;
}


/* Footer */

footer {
  color: rgba(255,255,255,.75);
  background-color: black;
  margin: .75rem 0 0 0;
  padding: .75rem 0 0 0;
}

@media (min-width: 992px) {
  .footer-container {
    display: flex;
  }
  
  .footer-social-medias {
    margin-left: auto;
    order: 2;
  }
}

.footer-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-bottom: .75rem;
}

.footer-title {
  flex-basis: 100%;
  width: 0;
}

.footer-item {
  margin-right: 1rem;
  margin-bottom: .25rem;
}

.footer-item-icon {
  font-size: 2rem;
  margin-right: 1.5rem;
}

.footer-link {
  color: rgba(255,255,255,.75);
}

.footer-link-icon {
  color: rgba(255,255,255,.75);
}

.footer-link-icon:hover {
  color: white;
  text-decoration: none;
}


/* Page header */
.page-header {
  background-color: #e5e5e5;
  padding: 10px 0;
}


/* Timeline */
/* Adapted from https://www.w3schools.com/howto/howto_css_timeline.asp */

/* The actual timeline (the vertical ruler) */
.timeline{
  position: relative;
}

.timeline::after {
  content: '';
  position: absolute;
  width: 6px;
  background-color: darkred;
  top: 0;
  bottom: 0;
  left: 50%;
  margin-left: -3px;
}

/* Container around content */
.timeline-container {
  padding: 5px 30px;
  position: relative;
  background-color: inherit;
  width: 50%;
}

/* The circles on the timeline */
.timeline-container::after {
  content: '';
  position: absolute;
  width: 25px;
  height: 25px;
  right: -13px;
  background-color: white;
  border: 4px solid darkred;
  top: 15px;
  border-radius: 50%;
  z-index: 1;
}

/* Place the container to the left */
.timeline-container-left {
  left: 0;
}

/* Place the container to the right */
.timeline-container-right {
  left: 50%;
}

/* Add arrows to the left container (pointing right) */
.timeline-container-left::before {
  content: ' ';
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  right: 20px;
  border: medium solid rgba(0,0,0,.03);
  border-width: 10px 0 10px 10px;
  border-color: transparent transparent transparent rgba(0,0,0,.03);
}

/* Add arrows to the right container (pointing left) */
.timeline-container-right::before {
  content: " ";
  height: 0;
  position: absolute;
  top: 22px;
  width: 0;
  z-index: 1;
  left: 20px;
  border: medium solid rgba(0,0,0,.03);
  border-width: 10px 10px 10px 0;
  border-color: transparent rgba(0,0,0,.03) transparent transparent;
}

/* Fix the circle for containers on the right side */
.timeline-container-right::after {
  left: -12px;
}

/* The actual content */
.timeline-content {
  padding: 10px 15px;
  background-color: rgba(0,0,0,.03);
  position: relative;
  border-radius: 6px;
}

/* Media queries - Responsive timeline on screens less than 600px wide */
@media (max-width: 767.98px) {
  /* Place the timelime to the left */
  .timeline::after {
    left: 31px;
  }

  /* Full-width containers */
  .timeline-container {
    width: 100%;
    padding-left: 60px;
    padding-right: 10px;
  }

  /* Make sure that all arrows are pointing leftwards */
  .timeline-container::before {
    left: 50px;
    border: medium solid rgba(0,0,0,.03);
    border-width: 10px 10px 10px 0;
    border-color: transparent rgba(0,0,0,.03) transparent transparent;
  }

  /* Make sure all circles are at the same spot */
  .timeline-container-left::after, .timeline-container-right::after {
    left: 19px;
  }

  /* Make all right containers behave like the left ones */
  .timeline-container-right {
    left: 0%;
  }
}

